--- a/androidmediaplayer/build.gradle
+++ b/androidmediaplayer/build.gradle
@@ -1,13 +1,12 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'com.android.library'
+    id 'kotlin-android'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.androidmediaplayer"
         minSdk 21
         targetSdk 32
         versionCode 1
